syntax="proto3";
//API Contract
service TodoService{
  rpc CreateTodo(Todo) returns (Todo) {}
  rpc GetTodo(TodoRequest) returns (Todo) {}
  rpc ListTodos(Empty) returns (TodoList) {}
}
message Empty{}
message Todo{
    string id=1;//1 here refers to the index of the field
    string title=2;//2 here refers to the index of the field
    optional string content=3;//3 here refers to the index of the field
}
message TodoList{
  repeated Todo todos=1;//1 here refers to the index of the field
}
message TodoRequest{
  string id=1;//1 here refers to the index of the field
}   
